# pickpocket

./: .env-sample  .gitignore  README.md  app.py  app_email.py  app_fave.py  pyproject.toml
pickpocket/: pocketapi.py  sendemail.py
tests/: setup.cfg  test_pickpocket.py
